--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* Make the whole page white with black text */
 body {
-  background-color: white;
+  background-color: blue;
   color: black;
   font-family: Arial, sans-serif;
   margin: 0;
