--- a/style.css
+++ b/style.css
@@ -29,6 +29,16 @@ header {
   background-repeat: no-repeat;        /* prevents tiling */
 }
 
+#banner-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
+}
+
 .header-content {
   position: relative;
   z-index: 2;
