--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ header {
   position: relative;
   height: 400px;
   overflow: hidden;
-  padding: 0; /* remove extra margin */
+  padding: 0 20px;
+  background-color: #2e2e2e; /* dark gray background */
 }
 
 #banner-video {
