--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ header {
   text-align: center;
 }
 
+.banner {
+  height: 100vh; /* full screen */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background: url("images/banner-photo.jpg") no-repeat center center/cover;
+}
+
 .banner-text h1 {
   font-family: "Times New Roman", serif;
   font-size: 56px; /* big headline */
