--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ header {
   justify-content: center;
   align-items: center;
   color: white;
-  background: url("images/banner-photo.jpg") no-repeat center center/cover;
+  background: url("images/photo.jpg") no-repeat center center/cover;
+  position: relative;
+  text-align: center;
 }
 
 .banner-text h1 {
